# bitrep

./: .editorconfig  .fortitude.toml  .fprettify.rc  .neocmake.toml  CMakeLists.txt  README.md
.github/workflows/: mirrors.yaml
.meta/: description  topics  topics-codeberg
src/: br_interface.f90  br_transcendentals.cpp
tests/: test_bitrep.f90
